Corrected planner offset

--- a/chemboard.html
+++ b/chemboard.html
@@ -2469,7 +2469,7 @@
 	const {
 	  origin=timePadding, 
 	  offset=new Vector2(
-	    (wState[BOARD_SIZE].x - timePadding.x * 2) / 7,
+	    (wState[BOARD_SIZE].x - timePadding.x) / 7,
 	    (wState[BOARD_SIZE].y - timePadding.y) / 48
 	  )
 	} = options
