--- a/index.html
+++ b/index.html
@@ -3939,7 +3939,7 @@
 	  switch (event.key) {
 	    case 'h':
 	       if (wState[TOOL] !== TEXT) {
-						alert('TOOLS:\n  P - paintbrush\n  R - rectangle\n  E - ellipse\n  L - line\n  B - bezier\n  T - text\n  M - measure\n  Z - zoom\n  S - select\n\nOTHER CONTROLS:\n  Backtick, 0 - 9: choose brush, hold to set color\n    the color palettes are arranged as follows:\n      Left - paintbrush color\n      Center - overlay color\n      Right - grid color\n  "-", "=" - adjust brush width\n  "[", "]" - adjust font size\n  F - toggle fill for shapes and arrows\n  V - place vanishing point, hold to scale grid units\n  G - choose grid type\n  J - choose grid cell type\n  I - reset Unsplash image\n  Right-Click - save marks-data')
+						alert('TOOLS:\n  P - paintbrush\n  R - rectangle\n  E - ellipse\n  L - line\n  B - bezier\n  O - polygon\n  T - text\n  M - measure\n  Z - zoom\n  S - select\n\nOTHER CONTROLS:\n  Backtick, 0 - 9: choose brush, hold to set color\n    the color palettes are arranged as follows:\n      Left - paintbrush color\n      Center - overlay color\n      Right - grid color\n  "-", "=" - adjust brush width or polygon sides\n  "[", "]" - adjust font size\n  F - toggle fill for shapes and arrows\n  V - place vanishing point, hold to scale grid units\n  G - choose grid type\n  J - choose grid cell type\n  I - reset Unsplash image\n  Right-Click - save marks-data')
 						alert('Ctrl:\n  constrains paintbrush to grid axes\n  constrains shapes to 1x1 aspect ratio\n  constrains line to 15 degree increments\n  Ctrl+Z - undo\n  Ctrl+Y - redo\n  Ctrl+C - copy selection\n  Ctrl+X - cut selection\n  Ctrl+V - paste selection\n\nArrow Keys:\n  Up - constrains paintbrush to vertical\n  Left - constrains paintbrush to horizontal\n  Down - constrains paintbrush to lines intersecting vanishing point\n  Right - constrains paintbrush to arcs about vanishing point\n  Forward Slash - constrains brush to parallel\n  Apostrophe - constrainst brush to perpendicular\n\nQUERY PARAMETERS:\n  document-title\n  screen-size, board-size\n  problem-image, wallpaper-image\n  marks-data')
 					}
 					break
@@ -3993,14 +3993,18 @@
 				}
 				break
 			case '-':
-				if (wState[TOOL] !== TEXT && layers[MARKS].lineWidth > 1) {
+			if (wState[TOOL] === POLYGON) {
+					setWhiteboardState(POLYGON_SIDES, Math.max(3, wState[POLYGON_SIDES] - 1))
+				} else if (wState[TOOL] !== TEXT && layers[MARKS].lineWidth > 1) {
 					setBrushWidth(parseInt(wState[BRUSHES][wState[BRUSH]].width) - 1)
 					setWhiteboardState(BRUSHES, wState[BRUSHES])
 					setWhiteboardState(ERASE_RADIUS, wState[ERASE_RADIUS])
 				} 
 				break
 			case '=':
-				if (wState[TOOL] !== TEXT) {
+				if (wState[TOOL] === POLYGON) {
+					setWhiteboardState(POLYGON_SIDES, Math.max(3, wState[POLYGON_SIDES] + 1))
+				} else if (wState[TOOL] !== TEXT) {
 					setBrushWidth(parseInt(wState[BRUSHES][wState[BRUSH]].width) + 1)
 					setWhiteboardState(BRUSHES, wState[BRUSHES])
 					setWhiteboardState(ERASE_RADIUS, wState[ERASE_RADIUS])
